service.yaml
apiVersion: v1
kind: Service
metadata:
  name: st2scl-project-service
spec:
  selector:
    app: st2scl-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
