istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: st2scl-gateway
spec:
  selector:
    istio: ingressgateway  # Use Istio's ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: st2scl-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - st2scl-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: st2scl-project-service
        port:
          number: 80
